--- a/user.plist
+++ b/user.plist
@@ -1,4 +1,4 @@
-    <?xml version="1.0" encoding="UTF-8"?>  
+<?xml version="1.0" encoding="UTF-8"?>  
     <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">  
     <plist version="1.0">  
     <dict>  
@@ -11,7 +11,7 @@
     <key>kind</key>  
     <string>software-package</string>  
     <key>url</key>  
-    <string>http://localhost:8080/1.ipa</string>  
+    <string>http://192.168.155.1:8080/web/1.ipa</string>  
     </dict>  
     </array>  
     <key>metadata</key>  
@@ -28,4 +28,4 @@
     </dict>  
     </array>  
     </dict>  
-    </plist>  
+    </plist>
