--- a/user.plist
+++ b/user.plist
@@ -1,31 +1,49 @@
-<?xml version="1.0" encoding="UTF-8"?>  
-    <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">  
-    <plist version="1.0">  
-    <dict>  
-    <key>items</key>  
-    <array>  
-    <dict>  
-    <key>assets</key>  
-    <array>  
-    <dict>  
-    <key>kind</key>  
-    <string>software-package</string>  
-    <key>url</key>  
-    <string>http://192.168.155.1:8080/web/1.ipa</string>  
-    </dict>  
-    </array>  
-    <key>metadata</key>  
-    <dict>  
-    <key>bundle-identifier</key>  
-    <string>com.cn.michelin.dealerportal</string>  
-    <key>bundle-version</key>  
-    <string>1.0</string>  
-    <key>kind</key>  
-    <string>software</string>  
-    <key>title</key>  
-    <string>abctest</string>  
-    </dict>  
-    </dict>  
-    </array>  
-    </dict>  
-    </plist>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>http://192.168.155.1:8080/web/1.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>needs-shine</key>
+					<false/>
+					<key>url</key>
+					<string>http://114.215.112.121:10081/one.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>needs-shine</key>
+					<false/>
+					<key>url</key>
+					<string>http://114.215.112.121:10082/two.png</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.cn.michelin.dealerportal</string>
+				<key>bundle-version</key>
+				<string>1.0</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>subtitle</key>
+				<string>欢迎使用此</string>
+				<key>title</key>
+				<string>加盟商平台</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
+</plist>
