--- a/user.plist
+++ b/user.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.155.1:8080/web/1.ipa</string>
+					<string>http://10.0.77.32:8080/apps/CRBR-MobilePortal.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.cn.michelin.dealerportal</string>
+				<string>com.company.CRBR-MobilePortal</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
