--- a/user.plist
+++ b/user.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://10.0.77.32:8080/apps/CRBR-MobilePortal.ipa</string>
+					<string>http://10.208.39.40:8080/web/1.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
