--- a/user.plist
+++ b/user.plist
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.cn.michelin.dealerportal</string>
+				<string>com.company.CRBR-MobilePortal</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
