--- a/user.plist
+++ b/user.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://10.208.39.40:8080/web/2.ipa</string>
+					<string>http://112.91.224.90:8090/app/CRBR-MobilePortal.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
